<resources>
    <string name="app_name">FFBF App</string>
    <string name="log_in">Log In</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="register">Register</string>
    <string name="username_label">Username/Email</string>
    <string name="password_label">Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_new_password_label">Confirm New Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="street_address_1">Street Address Line 1</string>
    <string name="street_address_2">Street Address Line 2</string>
    <string name="postcode">Postcode</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="county">County</string>
    <string name="submit">Submit</string>
    <string name="rating">Rating</string>
    <string name="phone">Phone No</string>
    <string name="venue_name">Venue Name</string>
    <string name="venue_description">Venue Description</string>
    <string name="please_enter_description">Please enter a short description</string>

    <string name="upload_image">Upload Image</string>
    <string name="pick_image">Pick Image</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="profilePageTitle">Your Account</string>
    <string name="logout">Sign Out</string>
    <string name="save">Save</string>
    <string name="reviews">Reviews</string>
    <string name="ffbf">F F B F</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password_text">Please enter the email address associated with your account and we will send you a password reset link.</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="change_password">Change password</string>
    <string name="change_password_text">Please enter a new password below</string>
    <string name="add_street_food_location">Add Street Food Location</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="add_street_food">Add Street Food</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="admin_panel_search_user">Search Users</string>
    <string name="admin_panel_users_list">Users List</string>
    <string name="admin_panel_assign_new_food_critic">Assign New Food Critic</string>
    <string name="admin_panel_manage_food_critics">Manage Food Critics</string>
    <string name="restaurant_detail_reviews_number_text_singular">Review</string>
    <string name="restaurant_detail_reviews_number_text_plural">Reviews</string>
    <string name="restaurant_detail_price_tag_label_text">Price Tag</string>
    <string name="restaurant_detail_make_a_reservation">Make a Reservation</string>
    <string name="restaurant_detail_party_size">Party Size</string>
    <string name="restaurant_detail_select_a_time">Select a time:</string>
    <string name="restaurant_detail_select_time">Select time</string>
    <string name="restaurant_detail_select_date">Select date</string>
    <string name="restaurant_detail_please_choose_date_and_time">Please choose date and time</string>


    <string name="restaurant_detail_description">A casual all-day dining experience with a cali inspired eatery in London Battersea Square, Ludlow\'s is a neighbourhood restaurant and bar serving plates for sharing, light dishes and wholesome meals, best washed down with one of our cocktails or a great glass of wine.</string>


    <string-array name="ratingValues">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="reservationPartySize">
        <item>2 persons</item>
        <item>3 persons</item>
        <item>4 persons</item>
        <item>5 persons</item>
        <item>6 persons</item>
        <item>7 persons</item>
        <item>8 persons</item>
        <item>9 persons</item>
        <item>10 persons</item>
        <item>11 persons</item>
        <item>12 persons</item>
        <item>13 persons</item>
        <item>14 persons</item>
        <item>15 persons</item>
        <item>16 persons</item>
        <item>17 persons</item>
        <item>18 persons</item>
        <item>19 persons</item>
        <item>20 persons</item>
        <item>21 persons</item>
        <item>22 persons</item>
        <item>23 persons</item>
        <item>24 persons</item>
        <item>25 persons</item>
        <item>26 persons</item>
        <item>27 persons</item>
        <item>28 persons</item>
        <item>29 persons</item>
        <item>30 persons</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
