<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFoodVenueActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:paddingBottom="40dp">

            <ProgressBar
                android:id="@+id/pbAddStreetFood"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAddStreetFoodPageTitle"
                android:layout_width="402dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="13dp"
                android:gravity="center"
                android:text="@string/add_street_food_location"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddStreetFoodVenueName"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tvAddStreetFoodPageTitle"
                android:layout_marginTop="42dp"
                android:ems="10"
                android:hint="@string/venue_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etAddStreetFoodAddressStreet"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/etAddStreetFoodVenueName"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/street"
                android:inputType="text" />

            <EditText
                android:id="@+id/etAddStreetFoodAddressCity"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/etAddStreetFoodAddressStreet"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etAddStreetFoodAddressCounty"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/etAddStreetFoodAddressCity"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/county"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etAddStreetFoodAddressPostcode"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_below="@+id/etAddStreetFoodAddressCounty"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/postcode"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etAddStreetFoodPhone"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/etAddStreetFoodAddressPostcode"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etAddStreetFoodDescription"
                android:layout_width="344dp"
                android:layout_height="116dp"
                android:layout_below="@+id/etAddStreetFoodPhone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/please_enter_description"
                android:inputType="textMultiLine"
                android:lines="5" />

            <!--            <ImageView-->
<!--                android:id="@+id/imageView3"-->
<!--                android:layout_width="169dp"-->
<!--                android:layout_height="104dp"-->
<!--                android:layout_below="@+id/etAddStreetFoodRating"-->
<!--                android:layout_alignStart="@+id/etAddStreetFoodRating"-->
<!--                android:layout_marginStart="0dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                tools:srcCompat="@tools:sample/backgrounds/scenic" />-->

            <TextView
                android:id="@+id/tvRatingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/ratingSpinner"
                android:layout_alignTop="@+id/ratingSpinner"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-19dp"
                android:text="@string/rating"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/ratingSpinner"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_below="@+id/etAddStreetFoodDescription"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:entries="@array/ratingValues"
                android:drawSelectorOnTop="true"
                android:prompt="@string/username_label"/>

            <TextView
                android:id="@+id/tvUploadImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/pickImageButton"
                android:layout_alignTop="@+id/pickImageButton"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-19dp"
                android:text="@string/pick_image"
                android:textSize="18sp" />

            <Button
                android:id="@+id/uploadImageButton"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_below="@+id/ratingSpinner"
                android:layout_alignStart="@+id/ratingSpinner"
                android:layout_marginStart="1dp"
                android:layout_marginTop="49dp"
                android:backgroundTint="#5E807C"
                android:text="@string/upload_image" />

            <ImageButton
                android:id="@+id/pickImageButton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_below="@+id/ratingSpinner"
                android:layout_alignEnd="@+id/ratingSpinner"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="0dp"
                android:backgroundTint="#499A91"
                app:srcCompat="@android:drawable/ic_menu_upload_you_tube" />

            <Button
                android:id="@+id/btnAddStreetFoodSubmit"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/pickImageButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/add_street_food_location" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>