<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFoodVenueActivity">

    <ProgressBar
        android:id="@+id/pbAddStreetFood"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:padding="9dp"
            android:paddingBottom="40dp">

            <EditText
                android:id="@+id/etAFV_inputEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/etAFV_inputPhone"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvAddStreetFoodPageTitle"
                android:layout_width="402dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="13dp"
                android:gravity="center"
                android:text="@string/add_street_food_location"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/etAFV_inputName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvAddStreetFoodPageTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:ems="10"
                android:hint="@string/venue_name"
                android:inputType="text" />

            <EditText

                android:id="@+id/etAFV_inputDescription"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_below="@+id/etAFV_inputName"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/please_enter_description"
                android:inputType="textMultiLine"
                android:lines="5" />

            <EditText

                android:id="@+id/etAFV_inputStreet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/etAFV_inputDescription"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text" />

            <EditText

                android:id="@+id/etAFV_inputCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAFV_inputStreet"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <EditText

                android:id="@+id/etAFV_inputCounty"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/etAFV_inputCity"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/county"
                android:inputType="textPersonName" />

            <EditText

                android:id="@+id/etAFV_inputPostcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/etAFV_inputCounty"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/postcode"
                android:inputType="textPersonName" />

            <EditText

                android:id="@+id/etAFV_inputPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/etAFV_inputPostcode"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <!--            <ImageView-->
            <!--                android:id="@+id/imageView3"-->
            <!--                android:layout_width="169dp"-->
            <!--                android:layout_height="104dp"-->
            <!--                android:layout_below="@+id/etAddStreetFoodRating"-->
            <!--                android:layout_alignStart="@+id/etAddStreetFoodRating"-->
            <!--                android:layout_marginStart="0dp"-->
            <!--                android:layout_marginTop="24dp"-->
            <!--                tools:srcCompat="@tools:sample/backgrounds/scenic" />-->

            <ImageButton
                android:id="@+id/pickImageButton"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_below="@+id/etAFV_inputPriceTagSpinner"
                android:layout_marginTop="500dp"
                android:backgroundTint="#499A91"
                app:srcCompat="@android:drawable/ic_menu_upload_you_tube" />

            <TextView
                android:id="@+id/tvUploadImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/pickImageButton"
                android:layout_alignTop="@+id/pickImageButton"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-19dp"
                android:text="@string/pick_image"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvRatingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/etAFV_inputRatingSpinner"
                android:layout_alignTop="@+id/etAFV_inputRatingSpinner"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-23dp"
                android:text="@string/rating"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/etAFV_inputRatingSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/etAFV_inputEmail"
                android:layout_marginTop="36dp"
                android:drawSelectorOnTop="true"
                android:entries="@array/ratingValues"
                android:prompt="@string/rating" />

            <Button
                android:id="@+id/btnAddStreetFoodSubmit"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/pickImageButton"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/add_street_food_location" />

            <TextView
                android:id="@+id/tvPriceTagLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/etAFV_inputPriceTagSpinner"
                android:layout_alignTop="@+id/etAFV_inputPriceTagSpinner"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-22dp"
                android:text="@string/rating"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/etAFV_inputPriceTagSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/etAFV_inputRatingSpinner"
                android:layout_marginTop="36dp"
                android:drawSelectorOnTop="true"
                android:prompt="@string/rating" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>